--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
-    "mongoose": "^5.9.9"
+    "mongoose": "^5.9.9",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
