--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.2",
     "bootstrap": "3.3.7",
     "chartist": "0.10.1",
+    "jwt-decode": "^2.2.0",
     "node-sass": "^4.14.0",
     "react": "16.8.6",
     "react-bootstrap": "0.32.4",
@@ -16,7 +17,8 @@
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
     "react-scripts": "^3.4.1",
-    "react-toggle": "4.0.2"
+    "react-toggle": "4.0.2",
+    "react-validation": "^3.0.7"
   },
   "devDependencies": {
     "@types/googlemaps": "3.30.19",
