--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.9.9",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "node-cron": "^2.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
